Added global configuration for runner